traces/bug_547.txt
src/femlib/GQuadTree.cpp:618: error: DEAD_STORE
  The value written to &dP (type double) is never used.
Showing all 1 steps of the trace


src/femlib/GQuadTree.cpp:618:3: Write of unused value
616.     const int nkv=Element::nv;
617.     const int d=Rd::d;
618.     R dP=DBL_MAX, nddd=0;
         ^
619.     Rd PPhat,Delta;
620.     int k=0;    
